将oracle数据库转换为mysql

--- a/src/main/resources/config/config_uat.properties
+++ b/src/main/resources/config/config_uat.properties
@@ -7,9 +7,9 @@
 
 #mysql版本
 jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://rm-bp17w92307z0q472upo.mysql.rds.aliyuncs.com:3306/xxx?useUnicode=true&amp;characterEncoding=UTF-8
-jdbc.username=xxx
-jdbc.password=xxx
+jdbc.url=jdbc:mysql://localhost:3306/vote?useUnicode=true&amp;characterEncoding=UTF-8
+jdbc.username=root
+jdbc.password=root
 
 #文件保存根地址
 file_root_path=/home/gameloft9/attachment/
