--- a/pom.xml
+++ b/pom.xml
@@ -133,17 +133,17 @@
       <version>1.0.27</version>
     </dependency>
     <!--mysql 驱动-->
-    <!--<dependency>-->
-      <!--<groupId>mysql</groupId>-->
-      <!--<artifactId>mysql-connector-java</artifactId>-->
-      <!--<version>5.1.25</version>-->
-    <!--</dependency>-->
-    <!--oracle 驱动-->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.25</version>
+    </dependency>
+    <!--oracle 驱动
     <dependency>
       <groupId>com.oracle</groupId>
       <artifactId>ojdbc6</artifactId>
       <version>11.2.2</version>
-    </dependency>
+    </dependency>-->
     <!--shiro-->
     <dependency>
       <groupId>org.apache.shiro</groupId>
